# caudio

./: CMakeLists.txt
audio/: CMakeLists.txt  main.c
examples/: CMakeLists.txt  main.c
include/audio/: audio.h
res/: desktop.ini
src/: CMakeLists.txt  audio.c
